# clipsx

./: .editorconfig  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CODING_STYLE.md  CONTENT_ACTIONS.md  DEPENDENCIES.md  PLANNING.md  UX_DECISIONS.md
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  dump_results.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: clip.rs  mod.rs  settings.rs
src-tauri/src/plugins/: mac_rounded_corners.rs
src-tauri/src/repositories/: clip_repository.rs  mod.rs  settings_repository.rs
src-tauri/src/services/: ai.rs  clipboard.rs  clipboard_monitor.rs  clipboard_platform.rs  clipboard_platform_linux.rs  clipboard_provider_trait.rs  intelligence.rs  mod.rs  ocr.rs  paste.rs  semantic.rs
src/features/app/: AppLayout.tsx
src/features/clipboard/: ClipActions.tsx  ClipActionsToolbar.tsx  ClipPreview.tsx  ClipboardHistory.tsx  index.ts
src/features/clipboard/components/: ClipboardGridItem.tsx  ClipboardListItem.tsx  ClipboardViewModeSelector.tsx  index.ts
src/features/clipboard/utils/: clipboardViewHelpers.ts  index.ts
src/features/clipboard/views/: ClipboardGridView.tsx  ClipboardListView.tsx  index.ts
src/features/content/: index.ts  types.ts  utils.ts
src/features/content/actions/: index.ts  registry.test.ts  registry.ts
src/features/content/actions/shared/: CopyAction.tsx  CopyAsPlainTextAction.tsx  DeleteAction.tsx  FavoriteAction.tsx  GenerateEmbeddingAction.tsx  OpenInDefaultEditorAction.tsx  PinAction.tsx  index.ts
src/features/content/actions/type-specific/: CSVActions.tsx  CodeActions.tsx  ColorActions.tsx  DateActions.tsx  EmailActions.tsx  MathActions.tsx  PhoneActions.tsx  SecretActions.tsx  URLActions.tsx  index.ts
src/features/content/icons/: ContentIcon.tsx  index.ts
src/features/content/previews/: CSVPreview.tsx  CodePreview.tsx  ColorPreview.tsx  EmailPreview.tsx  FilePreview.tsx  ImagePreview.tsx  JSONPreview.tsx  MathPreview.tsx  OfficePreview.tsx  TextPreview.tsx  URLPreview.tsx  index.tsx
src/features/content/utils/: color.ts  math.ts
src/features/hub/components/: ActionGrid.tsx  ActiveClipPreview.tsx  InputBar.tsx
src/features/hub/layout/: SemanticLayout.tsx
src/features/intelligence/: IntelligenceEngine.ts  types.ts  useIntelligence.ts
src/features/intelligence/actions/: ColorActions.ts  CopyAction.ts  CopyHtmlAction.ts  OpenUrlAction.ts  SendEmailAction.ts  ShareAction.ts  WebSearchAction.ts
src/features/search/: README.md  SearchBar.tsx
src/features/settings/: Plugins.tsx  README.md  Settings.tsx
src/features/transforms/: README.md
src/shared/components/: BottomBar.tsx  ErrorBoundary.tsx  Sidebar.tsx  ThemeToggle.tsx  TitleBar.tsx
src/shared/components/ui/: index.ts
src/shared/components/ui/Button/: Button.tsx  index.ts
src/shared/components/ui/Card/: Card.tsx  index.ts
src/shared/components/ui/Input/: Input.tsx  index.ts
src/shared/components/ui/Select/: Select.tsx  index.ts
src/shared/components/ui/Switch/: Switch.tsx  index.ts
src/shared/components/ui/Tabs/: Tabs.tsx  index.ts
src/shared/hooks/: useDebounce.ts  useTheme.tsx  useWindowBehavior.ts
src/shared/types/: clipboard.ts  index.ts  settings.ts
src/stores/: clipboardStore.ts  index.ts  settingsStore.ts  uiStore.ts
