[package]
name = "clipsx"
version = "0.1.0"
description = "AI-powered clipboard manager"
authors = ["gabriele.sato"]
edition = "2021"

[lib]
name = "clipsx_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "clipsx"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
arboard = "3.3"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0.18"
chrono = "0.4"
image = "0.25"  # For normalizing image data before hashing

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
