[package]
name = "clipsx"
version = "0.1.0"
description = "AI-powered clipboard manager"
authors = ["gabriele.sato"]
edition = "2021"

[lib]
name = "clipsx_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "clipsx"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
arboard = "3.3"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0.18"
chrono = "0.4"
image = "0.25"  # For normalizing image data before hashing
tauri-plugin-clipboard-manager = "2"
regex = "1.12.3"
lazy_static = "1.5.0"
url = "2.5.8"
tempfile = "3.25.0"
open = "5.3.3"
fastembed = "5.11.0"
tauri-plugin-decorum = "1.1.1"
walkdir = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
# Modern objc2 for clipboard_platform.rs
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSData"] }
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSRunningApplication", "NSWorkspace"] }
# Legacy cocoa/objc for mac_rounded_corners.rs (working version)
cocoa = "0.26"
objc = "0.2.7"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

